--- a/.github/workflows/busybox.yaml
+++ b/.github/workflows/busybox.yaml
@@ -19,8 +19,8 @@ jobs:
       uses: actions/checkout@v2
     - name: Install Cosign
       uses: sigstore/cosign-installer@main
-      with:
-        cosign-release: 'v1.13.1'
+      #with:
+      #  cosign-release: 'v1.13.1'
     - name: Log in to ghcr registry
       run: |
         echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
