--- a/.github/workflows/busybox.yaml
+++ b/.github/workflows/busybox.yaml
@@ -16,11 +16,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout Repo
-      uses: actions/checkout@v2
+      uses: actions/checkout@v4
     - name: Install Cosign
       uses: sigstore/cosign-installer@main
-      #with:
-      #  cosign-release: 'v1.13.1'
+      with:
+        cosign-release: 'v2.2.0'
     - name: Log in to ghcr registry
       run: |
         echo "${{ secrets.GITHUB_TOKEN }}" | docker login ghcr.io -u ${{ github.actor }} --password-stdin
@@ -42,7 +42,7 @@ jobs:
         echo "{{ github.ref.type }}"
         docker tag $IMAGE_NAME $IMAGE_ID:$VERSION
         docker push $IMAGE_ID:$VERSION
-        cosign sign --key env://COSIGN_KEY $IMAGE_ID:$VERSION
+        cosign sign --key env://COSIGN_KEY --tlog-upload=false $IMAGE_ID:$VERSION
       env:
         COSIGN_KEY: ${{secrets.COSIGN_PRIVATE_KEY}}
 
