--- a/.github/workflows/tagexpire.yaml
+++ b/.github/workflows/tagexpire.yaml
@@ -10,8 +10,6 @@ jobs:
       - uses: eumel8/expire-action@1.0.2
         with:
           token: ${{secrets.TAGEXPIRE}}
-          #repo_type: org
-          #orgname: caas-team
-          image_name: navlinkswebhook%2Fnavlinkswebhook
-          days_treshold: 365
+          image_name: busybox%2Fbusybox
+          days_treshold: 1
           protected_tags_regex: 2.*,1.*
