--- a/.github/workflows/tagexpire.yaml
+++ b/.github/workflows/tagexpire.yaml
@@ -11,5 +11,5 @@ jobs:
         with:
           token: ${{secrets.TAGEXPIRE}}
           image_name: busybox%2Fbusybox
-          days_treshold: 0
-          protected_tags_regex: "2.*,1.*"
+          days_treshold: 1000
+          protected_tags_regex: "2.*"
