--- a/.github/workflows/tagexpire.yaml
+++ b/.github/workflows/tagexpire.yaml
@@ -12,5 +12,5 @@ jobs:
           token: ${{secrets.TAGEXPIRE}}
           image_name: busybox%2Fbusybox
           days_treshold: 0
-          protected_tags_regex: "^dev$\|^latest$\|^2.0$"
+          protected_tags_regex: "^dev$\\|^latest$\\|^2.0$"
           #protected_tags_regex: '[23].*'
