--- a/.github/workflows/tagexpire.yaml
+++ b/.github/workflows/tagexpire.yaml
@@ -11,6 +11,7 @@ jobs:
         with:
           token: ${{secrets.TAGEXPIRE}}
           image_name: busybox%2Fbusybox
-          days_treshold: 0
-          protected_tags_regex: "^dev$\\|^latest$\\|^2.0$"
+          days_treshold: 1000
+          protected_tags_regex: "^(latest|dev|[0-9][0-9]\\.\\d+\\.\\d+)$"
+          #protected_tags_regex: "^dev$\\|^latest$\\|^2.0$"
           #protected_tags_regex: '[23].*'
